Fix wide images not fitting in the product image wrapper.

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -40,6 +40,12 @@
       img {
         height: 100%;
       }
+      &.horizontal {
+        img {
+          height: auto;
+          width: 100%;
+        }
+      }
     }
     .product-list-item-description-wrapper {
       display: grid;
